# bigbrother

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: docker-publish.yml
src/bigbrother/: __init__.py  __main__.py  client.py  cog.py  file_management.py  peppercord_audio.py  sink.py  sql.py  utils.py
tests/: __init__.py
