[tool.poetry]
name = "bigbrother"
version = "0.1.1"
description = "Big brother listens to your discord voice chats and lets you recall the audio data."
authors = ["Parker Wahle <regulad@regulad.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Extras
# Cannot be in a sperate category, doesn't work properly w/ poetry
pytest = {version = "^7.2.1", optional = true}
mypy = {version = "^1.1.1", optional = true}
# Dependencies
dislog = "^3.0.0"
py-cord = {extras = ["speed", "voice"], version = "^2.4.0"}
asyncpg = "^0.27.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.5.post1"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
tox = "^4.4.5"
pre-commit = "^3.0.4"

[tool.poetry.extras]
test = ["pytest"]
type = ["mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
